tests/NormalTests/paczka1/small_fuzzy/35881742.err
Error in line 3: WPqRnCe27G S701 18,3
Error in line 4: ZCmrVa8 S701 305,9
